--- a/.github/workflows/automated-tests.yaml
+++ b/.github/workflows/automated-tests.yaml
@@ -30,4 +30,6 @@ jobs:
         run: node --run test:spelling
       - name: Check linting
         run: node --run lint
+      - name: Check TypeScript types
+        run: node --run test:types
       - run: echo "🍏 This job's status is ${{ job.status }}."
